@@ -100,10 +100,11 @@ const int sc_log2_lookup_table[256] =
 /* *INDENT-ON* */
 
 int                 sc_package_id = -1;
-int                 sc_initialized = 0;
 
 FILE               *sc_trace_file = NULL;
 int                 sc_trace_prio = SC_LP_STATISTICS;
+
+static int          sc_initialized = 0;
 
 static int          default_malloc_count = 0;
 static int          default_free_count = 0;
@@ -166,16 +167,16 @@ sc_mpi_is_shared (void)
 #endif
 }
 
-#ifdef SC_ENABLE_PTHREAD
-
-static pthread_mutex_t sc_default_mutex = PTHREAD_MUTEX_INITIALIZER;
-static pthread_mutex_t sc_error_mutex = PTHREAD_MUTEX_INITIALIZER;
-
 int
 sc_get_package_id (void)
 {
   return sc_package_id;
 }
+
+#ifdef SC_ENABLE_PTHREAD
+
+static pthread_mutex_t sc_default_mutex = PTHREAD_MUTEX_INITIALIZER;
+static pthread_mutex_t sc_error_mutex = PTHREAD_MUTEX_INITIALIZER;
 
 static void
 sc_check_abort_thread (int condition, int package, const char *message)
@@ -981,13 +982,13 @@ sc_logv (const char *filename, int lineno,
 void
 sc_log_indent_push (void)
 {
-  sc_log_indent_push_count (sc_package_id, 1);
+  sc_log_indent_push_count (sc_get_package_id (), 1);
 }
 
 void
 sc_log_indent_pop (void)
 {
-  sc_log_indent_pop_count (sc_package_id, 1);
+  sc_log_indent_pop_count (sc_get_package_id (), 1);
 }
 
 void
@@ -1294,14 +1295,14 @@ sc_package_print_summary (int log_priority)
   int                 i;
   sc_package_t       *p;
 
-  SC_GEN_LOGF (sc_package_id, SC_LC_GLOBAL, log_priority,
+  SC_GEN_LOGF (sc_get_package_id (), SC_LC_GLOBAL, log_priority,
                "Package summary (%d total):\n", sc_num_packages);
 
   /* sc_packages is static and thus initialized to all zeros */
   for (i = 0; i < sc_num_packages_alloc; ++i) {
     p = sc_packages + i;
     if (p->is_registered) {
-      SC_GEN_LOGF (sc_package_id, SC_LC_GLOBAL, log_priority,
+      SC_GEN_LOGF (sc_get_package_id (), SC_LC_GLOBAL, log_priority,
                    "   %3d: %-15s +%d-%d   %s\n",
                    i, p->name, p->malloc_count, p->free_count, p->full);
     }
@@ -1508,7 +1509,8 @@ SC_GLOBAL_LOGF (int priority, const char *fmt, ...)
   va_list             ap;
 
   va_start (ap, fmt);
-  sc_logv ("<unknown>", 0, sc_package_id, SC_LC_GLOBAL, priority, fmt, ap);
+  sc_logv ("<unknown>", 0, sc_get_package_id (),
+           SC_LC_GLOBAL, priority, fmt, ap);
   va_end (ap);
 }
 
@@ -1518,7 +1520,8 @@ SC_LOGF (int priority, const char *fmt, ...)
   va_list             ap;
 
   va_start (ap, fmt);
-  sc_logv ("<unknown>", 0, sc_package_id, SC_LC_NORMAL, priority, fmt, ap);
+  sc_logv ("<unknown>", 0, sc_get_package_id (),
+           SC_LC_NORMAL, priority, fmt, ap);
   va_end (ap);
 }
 
@@ -1528,7 +1531,7 @@ SC_LOGF (int priority, const char *fmt, ...)
   {                                                     \
     va_list             ap;                             \
     va_start (ap, fmt);                                 \
-    sc_logv ("<unknown>", 0, sc_package_id,             \
+    sc_logv ("<unknown>", 0, sc_get_package_id (),      \
              SC_LC_GLOBAL, SC_LP_ ## p, fmt, ap);       \
     va_end (ap);                                        \
   }                                                     \
@@ -1537,7 +1540,7 @@ SC_LOGF (int priority, const char *fmt, ...)
   {                                                     \
     va_list             ap;                             \
     va_start (ap, fmt);                                 \
-    sc_logv ("<unknown>", 0, sc_package_id,             \
+    sc_logv ("<unknown>", 0, sc_get_package_id (),      \
              SC_LC_NORMAL, SC_LP_ ## p, fmt, ap);       \
     va_end (ap);                                        \
   }
